--- a/app/src/main/res/layout/fragment_subscriptions.xml
+++ b/app/src/main/res/layout/fragment_subscriptions.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,6 +12,18 @@
       android:horizontalSpacing="2dp"
       android:verticalSpacing="2dp"
       android:layout_height="match_parent"
-      android:layout_gravity="center_horizontal">
+      android:layout_gravity="center_horizontal"
+      android:paddingBottom="100dp"
+      android:clipToPadding="false">
   </GridView>
-</LinearLayout>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/add_podcast_fab"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="end|bottom"
+      app:srcCompat="@drawable/add"
+      android:contentDescription="@layout/addfeed"
+      android:layout_margin="16dp" />
+
+</FrameLayout>
